--- a/static/index.html
+++ b/static/index.html
@@ -32,6 +32,13 @@
         justify-content: center;
         align-items: center;
       }
+
+      main {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+      }
     </style>
     <title>nWeather</title>
   </head>
@@ -39,6 +46,14 @@
     <main>
       <h1>nWeather</h1>
       <p><a href="/playground">Visit the playground &rsaquo;</a></p>
+      <p>
+        <a
+          href="https://github.com/josefaidt/nWeather"
+          target="_blank"
+          rel="noopener noreferrer"
+          >Visit the Github repository &rsaquo;</a
+        >
+      </p>
     </main>
   </body>
 </html>
